--- a/templates/admin/groupDetails.html
+++ b/templates/admin/groupDetails.html
@@ -27,7 +27,7 @@
                     {% csrf_token %}
                         <tr>
                             <input type="hidden" name="student_id" value="{{student.id}}">
-                            <th scope="row">1</th>
+                            <th scope="row">{{ forloop.counter }}</th>
                             <td>{{student.points}}</td>
                             <td>{{student.first_name}}</td>
                             <td>{{student.last_name}}</td>
