--- a/templates/admin/addStudent.html
+++ b/templates/admin/addStudent.html
@@ -1,7 +1,7 @@
 {% extends "admin/base.html" %}
 
 {% block content %}
-<div class="container addStudentContainer">
+<div class="container addUserCont">
     <div>
         <h1>Dodawanie studenta</h1>
         <a class="backButton" href="{% url 'adminSite:students' %}" title="Powrót do listy studentów"><button type="button" class="btn btn-danger text-center w-25"><i class="fa fa-times"></i></button></a>
